style/style.css
/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain) */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,
em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,
table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,
nav,output,ruby,section,summary,time,mark,audio,video
  {margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}
article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
body{line-height:1}
ol,ul{list-style:none}
blockquote,q{quotes:none}
blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}
table{border-collapse:collapse;border-spacing:0}

@font-face{font-family:'apl';src:url('apl385.woff')format('woff'),url('apl385.ttf')format('truetype')}

     ::selection{background:#0a246a;color:#fff} /*must be separate rules*/
::-moz-selection{background:#0a246a;color:#fff} /*must be separate rules*/
body{background-color:#dcdad5;padding:0;margin:0;font-family:Verdana,"BitStream Vera Sans","DejaVu Sans",sans-serif;overflow:hidden}
/*The following lines disable selection of UI elements:
   https://stackoverflow.com/questions/826782/css-rule-to-disable-text-selection-highlighting/4358620#answer-4407335
   -webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none*/
input,textarea,pre,tt{font-family:apl,monospace;font-size:18px}
input,textarea,select,a{outline:0}
select:focus{outline:dotted #000 1px}
input[type=checkbox]:focus{outline:dotted #000 1px;outline-offset:2px}

/*z-indices; CodeMirror uses 1-10; .dlg uses 100+ */
.ui-tooltip             {z-index:9999}
#lb_tip_tri             {z-index: 301}
#lb_tip                 {z-index: 300}
#vt_bln,#vt_tri,#vt_rect{z-index: 300}
.menu .m-box            {z-index: 200}
.ui-front               {z-index: 100}
.ui-selectable-helper   {z-index: 100}
.CodeMirror-hints       {z-index:  10}
.cm-scroll              {z-index:   6}

/*connect page*/
#cn{position:absolute;left:0;right:0;top:0;bottom:0}
#cn .hsplitbar{width:6px;border-right:solid #888 1px}
#cn_favs{position:absolute;left:0;right:0;top:32px;bottom:0;border-color:#888 #fff #fff #888;border-width:2px;border-style:solid;overflow:auto}
#cn_favs>*{height:22px;line-height:22px;padding:0 2px 0 8px;margin-bottom:1px;background-color:#fff;cursor:default}
#cn_favs .go{float:right;height:20px;margin-top:1px}
#cn_favs .list_sel{background:#0a246a;color:#fff}
#cn_favs .list-focus{outline:dotted #000 1px}
#cn_favs div{overflow:hidden;position:relative}
#cn_abt{float:right}
#cn_lhs,#cn_rhs{position:absolute;top:0;bottom:0}
#cn_lhs{left:0;width:250px;overflow:hidden}
#cn_rhs{right:0;left:250px;padding:0;overflow:auto}
#cn_rhs_inner{padding:8px}
#cn_rhs_inner p{padding:4px 0}
#cn_fav_btns{position:absolute;top:0;left:0;right:0;height:32px;overflow:hidden;width:9999px;padding:3px}
#cn_fav_btns button,#cn_go{font-size:18px;min-width:75px}
#cn .indent{margin-left:24px}
#cn_exe{width:100%;margin-top:2px}
#cn_env{width:100%}
#cn_env_add{padding-left:32px}
#cn_env_add a{font-family:apl,monospace;font-size:18px}
.cn_hint{font-size:14px;color:#666;font-style:italic}
.cn_progress{display:block;width:100%;margin-bottom:8px}

#cn_listen_dlg,#cn_connecting_dlg{width:360px;height:160px}
.cn_dlg_content{padding:8px;text-align:center}

/*IDE page*/
#ide,body.floating-window{position:absolute;top:0;bottom:0;left:0;right:0}
.ride-win{width:100%;height:100%;display:flex;flex-direction:column}
.ride-win .ride-win-cm{flex-grow:1}

/*menu (see ../src/menu.js for the DOM structure)*/
.menu{background-color:#dcdad5;height:18px;line-height:17px;cursor:default;padding:0;margin:2px 0 0 0;
      font-family:sans-serif;border-bottom:solid #888 1px;/*used as a separator*/}
.menu a{text-decoration:none;color:black;cursor:default}
.menu .m-opener.m-top{text-align:center;border:solid transparent 1px;padding:0 5px;margin:0}
.menu .m-open .m-top{border-color:#888 #fff #fff #888}
.menu .m-open>.m-box{display:block}
.menu>.m-sub{float:left}
.menu .m-box{background-color:#dcdad5;border-color:#fff #888 #888 #fff;display:none;border-style:solid;
             border-width:1px 2px 2px 1px;position:absolute;padding:1px;margin:2px 0 0 0;min-width:125px;
             white-space:nowrap}
.menu .m-box .m-box{margin-left:100%;margin-top:-17px}
.menu .m-box a{display:block;height:17px;line-height:17px;text-align:left;padding:1px 17px;overflow:hidden;
               text-overflow:ellipsis;border-color:#fff #888 #888 #fff}
.menu .m-box a .m-shc{font-size:small;float:right;margin-left:20px;color:#666}
.menu .m-box a.m-checked{background:transparent 5px center no-repeat url(img/menu_chk.png)}
.menu .m-box a:focus{background:#0a246a;color:#fff}
.menu .m-box a:focus .m-shc{color: #fff}
.menu .m-box a:focus.m-checked{background:#0a246a 5px center no-repeat url(img/menu_chk_wht.png)}
.menu .m-box .m-opener{
  /* "right 5px" might not work in Safari, see
       https://stackoverflow.com/questions/3197250/position-a-css-background-image-x-pixels-from-the-right#comment-35531805 */
  background:transparent center right 5px no-repeat url(img/menu_tri.png)
}
.menu .m-box .m-opener:focus{background: #0a246a center right 5px no-repeat url(img/menu_tri_wht.png)}
.menu hr{margin: 3px 0 5px 0}

/*language bar*/
#lb{font-family:apl,monospace;font-size:18px;background-color:#dcdad5;padding:0 2px 0 10px;
    cursor:default;border-bottom:solid #888 1px;line-height:28px}
#lb b{font-weight:normal;margin-bottom:3px;padding:1px;color:#666}
#lb b:hover{background-color:#eee}
#lb b:active{background-color:#fff}
#lb_prf{float:right;margin-right:4px;width:24px;height:24px;background:no-repeat center center url(img/lb_prf.png)}
#lb_prf:hover{background-color:#eee}
/* ... */

